kubernetes/apps/storage/nextcloud/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-redirect
  namespace: storage
spec:
  redirectRegex:
    regex: ^https://cloud.${DOMAIN}/(.*)$
    replacement: https://cloud.${DOMAIN}/remote.php/dav/
