kubernetes/apps/storage/nextcloud/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-redirect
  namespace: storage
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: storage-nextcloud-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: cloud.${DOMAIN}
      http:
        paths:
          - path: /.well-known/carddav
            pathType: Exact
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
          - path: /.well-known/caldav
            pathType: Exact
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
  tls:
    - hosts:
        - cloud.${DOMAIN}
